# MIPT_simulator

./: CMakeLists.txt  Chiller_griller.cpp  Chiller_griller.hpp  Danya.cpp  Danya.hpp  Group.cpp  Group.hpp  Human_being.cpp  Human_being.h  Institute.hpp  Lector.cpp  Lector.hpp  MIPT_simulator.cbp  MIPT_simulator.layout  Matan_lector.cpp  Matan_lector.hpp  Matan_semer.cpp  Matan_semer.hpp  Matan_teacher.cpp  Matan_teacher.hpp  Normie.cpp  Normie.hpp  Obshesos_labnik.cpp  Obshesos_labnik.hpp  Obshesos_lector.cpp  Obshesos_lector.hpp  Obshesos_semer.cpp  Obshesos_semer.hpp  Obshesos_teacher.cpp  Obshesos_teacher.hpp  Semer.cpp  Semer.hpp  Student.cpp  Student.hpp  Teacher.cpp  Teacher.hpp  main.cpp
Obshesos_and_semer/: Obshesos_labnik.cpp  Obshesos_labnik.hpp  Obshesos_lector.cpp  Obshesos_semer.cpp  Obshesos_semer.hpp  Obshesos_teacher.cpp  Semer.cpp  Semer.hpp
students/: Normie.cpp  Student.hpp
teachers/: Lector.cpp  Lector.hpp  Matan_lector.cpp  Matan_lector.hpp  Matan_semer.cpp  Matan_semer.hpp  Matan_teacher.cpp  Matan_teacher.hpp  Obshesos_labnik.cpp  Obshesos_labnik.hpp  Obshesos_lector.cpp  Obshesos_lector.hpp  Obshesos_semer.cpp  Obshesos_semer.hpp  Obshesos_teacher.cpp  Obshesos_teacher.hpp  Semer.cpp  Semer.hpp  Teacher.cpp  Teacher.hpp
